<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.apps.vladan.weather_widget.ConfigureActivity">

    <TextView
        android:id="@+id/unit_view"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:hint="@string/spinner_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/unit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/unit_view"
        android:layout_below="@+id/unit_view"
        android:text="@string/unit_button" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:hint="@string/city_hint"
        android:layout_above="@+id/place_button"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/unit_view"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/place_button"
        android:text="@string/place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_above="@+id/set_button"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/set_button"
        android:text="@string/city_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/place_button" />


</RelativeLayout>
