<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/myshape"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="2dp"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@mipmap/start_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="@string/appwidget_text"
            android:textColor="@color/two_priority_text"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/more_less"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/more_less"
            android:textAlignment="center"
            android:textColor="@color/two_priority_text"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="3"
                android:clickable="true"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/appwidget_text"
                    android:textColor="@color/first_priority_text"
                    android:textSize="24sp"
                    android:textStyle="bold|italic">

                </TextView>

                <TextView
                    android:id="@+id/mainDescription"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/appwidget_text"
                    android:textColor="@color/two_priority_text"
                    android:textSize="14sp"
                    android:textStyle="bold|italic">

                </TextView>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/appwidget_text"
                    android:textColor="@color/two_priority_text"
                    android:textSize="14sp"
                    android:textStyle="bold|italic">

                </TextView>
            </LinearLayout>


            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical|start"
                android:textColor="@color/first_priority_text"
                android:textSize="30sp"
                android:textStyle="bold|italic">

            </TextView>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line" />

    <LinearLayout
        android:id="@+id/weather_icon1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <TextView
                android:id="@+id/temperature_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <TextView
                android:id="@+id/temperature_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <TextView
                android:id="@+id/temperature_3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <TextView
                android:id="@+id/temperature_4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time_5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/icon_5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:contentDescription="@string/weather_icon"
                android:src="@mipmap/my_start_icon" />

            <TextView
                android:id="@+id/temperature_5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/two_priority_text"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/information_provided"
        android:textColor="@color/two_priority_text"
        android:textSize="10sp" />

</LinearLayout>


